mobile styline, navigation fix on mobile

--- a/app/styles/_gobals.scss
+++ b/app/styles/_gobals.scss
@@ -59,7 +59,7 @@ h3 {font-size: 1.5em}
 
 .nav-sidebar {
   position: fixed;
-  z-index:10;
+  z-index:100;
 
   a { 
     font-family: var(--display-font); 
@@ -77,10 +77,15 @@ h3 {font-size: 1.5em}
   }
 
   &.nav-on  {
-    animation-name: nav-animation-on;
+    animation-name: nav-animation-on-mobile;
     animation-duration: .5s;
-    width: 300px;
     background: var(--hoffmann-blue);
+    height: 100vh !important;
+
+    @media(min-width: 1024px){
+      animation-name: nav-animation-on;
+      width: 300px;
+    }
 
     .navigation-linkset {
       display: block;
@@ -89,11 +94,14 @@ h3 {font-size: 1.5em}
   }
 
   &.nav-off {
-
-    animation-name: nav-animation-off;
     animation-duration: .5s;
-    width: 5%;
     background: black;
+    animation-name: nav-animation-off-mobile;
+
+    @media(min-width: 1024px){
+      animation-name: nav-animation-off;
+      width: 5%;
+    }
 
     .navigation-linkset {
       display:none;
@@ -109,13 +117,23 @@ h3 {font-size: 1.5em}
   100% {width: 300px; background: var(--hoffmann-blue);}
 }
 @keyframes nav-animation-off {
-  
   0% {width: 300px; background: var(--hoffmann-blue)}
   100% {width: 5%; background: black;}
 }
 
+@keyframes nav-animation-on-mobile {
+  0% {height: 5%; background: black;}
+  100% {height: 100vh; background: var(--hoffmann-blue);}
+}
+@keyframes nav-animation-off-mobile {
+  0% {height: 100vh; background: var(--hoffmann-blue)}
+  100% {height: 5%; background: black;}
+}
+
 main {
-  margin-left: 5%;
+  @media(min-width: 1024px){
+    margin-left: 5%;
+  }
 }
 
 
@@ -379,7 +397,7 @@ details[open] {
   padding: 0;
 
   .page-section__inner {
-    @media(min-width: 968px){
+    @media(min-width: 1024px){
       padding-inline: 8rem;
     }
   }
@@ -399,7 +417,7 @@ details[open] {
     .page-section__overview {
       display: grid;
       grid-template-columns: 1fr;
-      @media(min-width: 968px){
+      @media(min-width: 1024px){
         grid-template-columns: .5fr 2fr;
         gap: 2rem;
         justify-content: center;
@@ -408,7 +426,7 @@ details[open] {
         img {
           position: relative !important;
           height: auto !important;
-          @media(max-width: 968px){
+          @media(max-width: 1024px){
             width: 40% !important;
             margin: 0 auto;
             margin-bottom: 2rem;
@@ -544,7 +562,7 @@ details[open] {
     padding-top: 2rem;
     display: grid;
     grid-template-columns: 1fr;
-    @media(min-width: 968px){
+    @media(min-width: 1024px){
       grid-template-columns: 1fr 1fr;
       gap: 1rem;
     }
@@ -792,7 +810,7 @@ details[open] {
           grid-template-columns: 1fr;
           margin-bottom: 1rem;
 
-          @media(min-width: 968px){
+          @media(min-width: 1024px){
             grid-template-columns: 1fr 2fr;
             gap: 2rem;
           }
@@ -816,7 +834,7 @@ details[open] {
           }
           
           &:nth-child(even){
-            @media(min-width: 968px){
+            @media(min-width: 1024px){
               grid-template-columns: 2fr 1fr;
             }
             
@@ -824,14 +842,14 @@ details[open] {
               background-size: cover;
               background-position: center center;
               background-repeat: no-repeat;
-              @media(min-width: 968px){
+              @media(min-width: 1024px){
                 order: 2;
               }
               
             }
 
             .work-item-content {
-              @media(max-width: 968px){
+              @media(max-width: 1024px){
                 padding: 25px;
                 order: 1;
                 text-align: left;
@@ -845,7 +863,7 @@ details[open] {
             background-repeat: no-repeat;
             background-size: contain;
 
-            @media(max-width: 968px){
+            @media(max-width: 1024px){
               width: 100%;
               height: 300px;
               background-size: contain !important;
