--- a/app/styles/_home-animation.scss
+++ b/app/styles/_home-animation.scss
@@ -20,7 +20,7 @@
         transform-origin: top;
         margin-left: 1rem;
 
-        @media(min-width: 968px){
+        @media(min-width: 1024px){
             margin-left: 15.5rem;
         }
 
